refactor: data logic
[skip ci]

--- a/layouts/partials/data/ref.html
+++ b/layouts/partials/data/ref.html
@@ -16,7 +16,7 @@
 {{ end }}
 
 {{/* Likes */}}
-{{ if and (eq .Params.type "like") .Params.likeOf }}
+{{ if and (or (eq .Params.type "like") (eq .Params.subType "like")) .Params.likeOf }}
 	{{ $data = dict "url" .Params.likeOf }}
 	{{ if .Site.Data.refs }}
 		{{ $data = index .Site.Data.refs (md5 .Params.likeOf) | default $data }}
@@ -34,7 +34,7 @@
 {{ end }}
 
 {{/* Replies */}}
-{{ if and (eq .Params.subtype "reply") .Params.inReplyTo }}
+{{ if and (or (eq .Params.type "reply") (eq .Params.subtype "reply"))  .Params.inReplyTo }}
 	{{ $data = dict "url" .Params.inReplyTo }}
 	{{ if .Site.Data.refs }}
 		{{ $data = index .Site.Data.refs (md5 .Params.inReplyTo) | default $data }}
