--- a/layouts/partials/content/data/ref.html
+++ b/layouts/partials/content/data/ref.html
@@ -9,19 +9,23 @@
 {{ if .Site.Data.refs }}
 
 	{{/* Likes */}}
-	{{ if and (eq .Params.type "like") .Params.likeOf }}
+	{{ if and (eq .Params.subType "like") .Params.likeOf }}
 		{{ $data = index .Site.Data.refs (md5 .Params.likeOf) | default nil }}
 		{{ $webmentionClass = "u-like-of" }}
 	{{ end }}
 		
 	{{/* Reposts */}}
-	{{ if and (eq .Params.type "repost") .Params.repostOf }}
+	{{ if and (eq .Params.subType "repost") .Params.repostOf }}
 		{{ $data = index .Site.Data.refs (md5 .Params.repostOf) | default nil }}
 		{{ $webmentionClass = "u-repost-of" }}
 	{{ end }}
 
 	{{/* Replies */}}
 	{{ if and (eq .Params.type "reply") .Params.inReplyTo }}
+		{{ $data = index .Site.Data.refs (md5 .Params.inReplyTo) | default nil }}
+		{{ $webmentionClass = "u-in-reply-to" }}
+	{{ end }}
+	{{ if and (eq .Params.subType "reply") .Params.inReplyTo }}
 		{{ $data = index .Site.Data.refs (md5 .Params.inReplyTo) | default nil }}
 		{{ $webmentionClass = "u-in-reply-to" }}
 	{{ end }}
