--- a/layouts/partials/data/ref.html
+++ b/layouts/partials/data/ref.html
@@ -16,16 +16,17 @@
 {{ end }}
 
 {{/* Likes */}}
-{{ if and (or (eq .Params.type "like") (eq .Params.subType "like")) .Params.likeOf }}
-	{{ $data = dict "url" .Params.likeOf }}
+{{ if and (eq .Params.subType "like") .Params.likeof }}
+	{{ $data = dict "url" .Params.likeof }}
 	{{ if .Site.Data.refs }}
 		{{ $data = index .Site.Data.refs (md5 .Params.likeOf) | default $data }}
 	{{ end }}
 	{{ $webmentionClass = "u-like-of" }}
 {{ end }}
 
+
 {{/* Reposts */}}
-{{ if and (eq .Params.type "repost") .Params.repostOf }}
+{{ if and (eq .Params.subType "repost") .Params.repostof }}
 	{{ $data = dict "url" .Params.repostOf }}
 	{{ if .Site.Data.refs }}
 		{{ $data = index .Site.Data.refs (md5 .Params.repostOf) | default $data }}
