--- a/layouts/partials/content/data/ref.html
+++ b/layouts/partials/content/data/ref.html
@@ -9,34 +9,34 @@
 {{ if .Site.Data.refs }}
 
 	{{/* Likes */}}
-	{{ if and (eq .Params.subType "like") .Params.likeOf }}
-		{{ $data = index .Site.Data.refs (md5 .Params.likeOf) | default nil }}
+	{{ if and (eq .Params.sub_type "like") .Params.like_of }}
+		{{ $data = index .Site.Data.refs (md5 .Params.like_of) | default nil }}
 		{{ $webmentionClass = "u-like-of" }}
 	{{ end }}
-		
+
 	{{/* Reposts */}}
-	{{ if and (eq .Params.subType "repost") .Params.repostof }}
-		{{ $data = index .Site.Data.refs (md5 .Params.repostof) | default nil }}
+	{{ if and (eq .Params.sub_type "repost") .Params.repost_of }}
+		{{ $data = index .Site.Data.refs (md5 .Params.repost_of) | default nil }}
 		{{ $webmentionClass = "u-repost-of" }}
 	{{ end }}
 
 	{{/* Replies */}}
-	{{ if and (eq .Params.type "reply") .Params.inReplyTo }}
-		{{ $data = index .Site.Data.refs (md5 .Params.inReplyTo) | default nil }}
+	{{ if and (eq .Params.type "reply") .Params.in_reply_to }}
+		{{ $data = index .Site.Data.refs (md5 .Params.in_reply_to) | default nil }}
 		{{ $webmentionClass = "u-in-reply-to" }}
 	{{ end }}
-	{{ if and (eq .Params.subType "reply") .Params.inReplyTo }}
-		{{ $data = index .Site.Data.refs (md5 .Params.inReplyTo) | default nil }}
+	{{ if and (eq .Params.sub_type "reply") .Params.in_reply_to }}
+		{{ $data = index .Site.Data.refs (md5 .Params.in_reply_to) | default nil }}
 		{{ $webmentionClass = "u-in-reply-to" }}
 	{{ end }}
 
 	{{/* Bookmarks */}}
-	{{ if and (eq .Params.subType "bookmark") .Params.bookmarkOf }}
-		{{ $data = dict "url" .Params.bookmarkOf }}
+	{{ if and (eq .Params.sub_type "bookmark") .Params.bookmark_of }}
+		{{ $data = dict "url" .Params.bookmark_of }}
 		{{ if .Site.Data.refs }}
-			{{ $data = index .Site.Data.refs (md5 .Params.bookmarkOf) | default $data }}
+			{{ $data = index .Site.Data.refs (md5 .Params.bookmark_of) | default $data }}
 		{{ end }}
-		{{ $webmentionClass = "u-bookmark-of" }}
+		{{ $webmentionClass = "u-bookmark_of" }}
 	{{ end }}
 
 {{ end }}
