feat: add hypothes.is script

--- a/layouts/partials/custom_head.html
+++ b/layouts/partials/custom_head.html
@@ -10,3 +10,4 @@
 <link rel="webmention" href="{{ . }}/webmention" />
 <link rel="pingback" href="{{ . }}/xmlrpc" />
 {{ end }}
+<script src="https://hypothes.is/embed.js" async></script>
