--- a/layouts/partials/site_footer.html
+++ b/layouts/partials/site_footer.html
@@ -4,7 +4,13 @@
   {{ $superuser_role := "" }}
   {{ range first 1 (where (where site.Pages "Section" "authors") "Params.superuser" true) }}
     {{ $superuser_name = .Params.name }}
-    {{ $superuser_username = path.Base (path.Split .Path).Dir }}
+    {{ $path := "" }}
+    {{ with .File }}
+          {{ $path = .Path }}
+    {{ else }}
+          {{ $path = .Path }}
+    {{ end }}
+    {{ $superuser_username = path.Base (path.Split $path).Dir }}
     {{ $superuser_role = .Params.role }}
   {{ end }}
 
