--- a/layouts/project/single.html
+++ b/layouts/project/single.html
@@ -20,13 +20,13 @@
     {{ $count := len $items }}
     {{ if ge $count 1 }}
       <h2>{{ (i18n "posts") }}</h2>
-      {{ range $items }}
+      {{ range $index, $item := $items }}
         {{ if eq site.Params.projects.post_view 1 }}
-          {{ partial "li_list" . }}
+          {{ partial "functions/render_view" (dict "page" $ "item" . "view" (site.Params.projects.post_view | default "list") "index" $index) }}
         {{ else if eq site.Params.projects.post_view 3 }}
-          {{ partial "li_card" . }}
+          {{ partial "functions/render_view" (dict "page" $ "item" . "view" (site.Params.projects.post_view | default "card") "index" $index) }}
         {{ else }}
-          {{ partial "li_compact" . }}
+        {{ partial "functions/render_view" (dict "page" $ "item" . "view" (site.Params.projects.post_view | default "compact") "index" $index) }}
         {{ end }}
       {{ end }}
     {{ end }}
@@ -35,13 +35,13 @@
     {{ $count := len $items }}
     {{ if ge $count 1 }}
       <h2>{{ (i18n "notes") }}</h2>
-      {{ range $items }}
+      {{ range $index, $item := $items }}
         {{ if eq site.Params.projects.post_view 1 }}
-          {{ partial "li_list" . }}
+          {{ partial "functions/render_view" (dict "page" $ "item" . "view" (site.Params.projects.post_view | default "list") "index" $index) }}
         {{ else if eq site.Params.projects.post_view 3 }}
-          {{ partial "li_card" . }}
+          {{ partial "functions/render_view" (dict "page" $ "item" . "view" (site.Params.projects.post_view | default "card") "index" $index) }}
         {{ else }}
-          {{ partial "li_compact" . }}
+        {{ partial "functions/render_view" (dict "page" $ "item" . "view" (site.Params.projects.post_view | default "compact") "index" $index) }}
         {{ end }}
       {{ end }}
     {{ end }}
@@ -58,7 +58,7 @@
         {{ else if eq site.Params.projects.publication_view 4 }}
           {{ partial "li_citation" . }}
         {{ else }}
-          {{ partial "li_compact" . }}
+          {{ partial "views/compact" . }}
         {{ end }}
       {{ end }}
     {{ end }}
@@ -73,7 +73,7 @@
         {{ else if eq site.Params.projects.talk_view 3 }}
           {{ partial "li_card" . }}
         {{ else }}
-          {{ partial "li_compact" . }}
+          {{ partial "views/compact" . }}
         {{ end }}
       {{ end }}
     {{ end }}
