--- a/layouts/partials/comments.html
+++ b/layouts/partials/comments.html
@@ -1,17 +1,21 @@
-{{ $commentable_map := site.Params.comments.commentable | default dict }}
-{{ $commentable_bool := index $commentable_map .Type | default false }}
-{{ if site.Params.comments.provider | and $commentable_bool | and (ne .Params.commentable false) | or .Params.commentable }}
+{{ $provider := trim (site.Params.features.comments.provider | lower) " " }}
+{{ if $provider }}
+  {{ $provider_tpl := printf "partials/comments/%s.html" $provider }}
+  {{ $provider_exists := templates.Exists $provider_tpl }}
+  {{ if not $provider_exists }}
+    {{ errorf "The '%s' comment provider was not found." $provider }}
+  {{ end }}
+
+  {{ $commentable_page := .Params.commentable }}
+
+  {{ if $commentable_page }}
   <aside id="comments">
-  	<div class="article-widget">
-      <h3>Comments</h3>
-      <p>As an alternative to using webmentions you may, if you prefer, leave a comment directly here:</p>
-      {{ if eq site.Params.comments.provider 1 }}
-        {{ partial "comments/disqus.html" . }}
-      {{ else if eq site.Params.comments.provider 2 }}
-        {{ partial "comments/commento.html" . }}
-      {{ else if eq site.Params.comments.provider 3 }}
-        {{ partial "comments/utterances.html" . }}
-      {{ end }}
+    <div class="article-widget">
+    <h3>Comments</h3>
+    <p>As an alternative to using webmentions you may, if you prefer, leave a comment directly here:</p>
+    {{ partial $provider_tpl . }}
     </div>
-  </aside>
+    </aside>
+  {{ end }}
 {{ end }}
+
