feat: add edit page links based on frontmatter

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -31,7 +31,8 @@
     <div class="article-style e-content" itemprop="articleBody">
       {{ .Content }}
     </div>
-    
+
+    {{ partial "page_edit" . }}
 
     {{ partial "tags.html" . }}
 
