feat: add bridgy syndication links in header

--- a/layouts/partials/hooks/head-end/legacy-header.html
+++ b/layouts/partials/hooks/head-end/legacy-header.html
@@ -11,4 +11,6 @@
 <link rel="webmention" href="{{ . }}/webmention" />
 <link rel="pingback" href="{{ . }}/xmlrpc" />
 {{ end }}
+<a href="https://brid.gy/publish/mastodon"></a>
+<a href="https://brid.gy/publish/twitter"></a>
 <script src="https://hypothes.is/embed.js" async></script>
