--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -6,6 +6,7 @@
 @import "shared/typography";
 @import "components/social-feed";
 @import "components/webmention-form";
+@import "reveal_custom";
 
 ins {text-decoration:none; background-color:yellow;}
 .dark ins {text-decoration:none; background-color:green;}
