chore: wording about comments

--- a/layouts/partials/page_webmentions.html
+++ b/layouts/partials/page_webmentions.html
@@ -12,7 +12,7 @@
                 <input type="hidden" name="target" value="{{ .Permalink }}" />
                 <p>
                     You can respond to this {{ $pageType }} using <a href="https://indieweb.org/Webmention">Webmentions</a>,
-                    and any tweets about it will be picked up automatically.
+                    and any fediverse posts or tweets about it will be picked up automatically.
       </p>
       <p>
                     If you published a response to this elsewhere which does not show up below, <label for="webmention-source">let me know the URL</label>:
