style: add space after summary on post page

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -17,3 +17,7 @@ ins {text-decoration:none; background-color:yellow;}
 .card-simple:first-of-type {
     margin-top: var(--spacing-line);
 }
+
+.p-summary{
+    margin-bottom: var(--spacing-three-quarter-line);
+}
