--- a/layouts/partials/components/page_sharer.html
+++ b/layouts/partials/components/page_sharer.html
@@ -11,8 +11,8 @@
       {{/* See https://github.com/wowchemy/wowchemy-hugo-themes/pull/2726 */}}
       {{ $link := replace .url "{url}" ($.Permalink | urlquery) }}
       {{ $link = replace $link "{title}" ($.Title | urlquery) }}
-      {{/* Workaround `urlquery` encoding for mailto as `urlquery` encodes `+` as `%2B` and ` ` (space) as `+` */}}
-      {{ if eq (urls.Parse $link).Scheme "mailto" }}
+      {{/* Workaround `urlquery` encoding for mailto or for tootpick sharer as `urlquery` encodes `+` as `%2B` and ` ` (space) as `+` */}}
+      {{ if or (eq (urls.Parse $link).Scheme "mailto") (eq .id "mastodon") }}
         {{ $link = replace $link "+" "%20" }}
       {{ end }}
       <li>
