style: make post summary italic

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -20,4 +20,5 @@ ins {text-decoration:none; background-color:yellow;}
 
 .p-summary{
     margin-bottom: var(--spacing-three-quarter-line);
+    font-style: italic;
 }
