--- a/layouts/stream/single.html
+++ b/layouts/stream/single.html
@@ -77,7 +77,8 @@
 		{{ if $webmentionConfig.enabled }}
 			<aside id="responses">
 				<div class="article-widget">
-					<h3>Responses ({{ len $webmentions.all }})</h3>
+          <h3>Responses {{ with $webmentions.all}}({{ len . }}){{end}}</h3>
+          {{}}
 				  <form method="post" action="{{ $webmentionConfig.receiver }}" target="_blank" rel="noopener" class="webmention-form" data-component="webmention-form">
 					<input type="hidden" name="target" value="{{ .Permalink }}" />
           {{ if ne $pageType "stream"}}
@@ -97,7 +98,7 @@
 						<input type="submit" value="Notify me!" class="webmention-form__submit" />
 					</div>
 				</form>
-				{{ partial "content/webmentions/list" $webmentions }}
+        {{ partial "content/webmentions/list" $webmentions }}
       </div>
 			</aside>
 		{{ end }}
