--- a/layouts/partials/page_webmentions.html
+++ b/layouts/partials/page_webmentions.html
@@ -7,7 +7,7 @@
     {{ if $webmentionConfig.enabled }}
         <aside id="responses">
             <div class="article-widget">
-                <h3>Responses ({{ len $webmentions.all }})</h3>
+                <h3>Responses</h3>
               <form method="post" action="{{ $webmentionConfig.receiver }}" target="_blank" rel="noopener" class="webmention-form" data-component="webmention-form">
                 <input type="hidden" name="target" value="{{ .Permalink }}" />
                 <p>
