fix: upgrade modules to use new path

--- a/layouts/partials/functions/render_view.html
+++ b/layouts/partials/functions/render_view.html
@@ -1,4 +1,4 @@
-{{/* Wowchemy content preview renderer */}}
+{{/* Hugo Blox Builder content preview renderer */}}
 
 {{ $page := .page }}
 {{ $item := .item }}
